<resources>
    <string name="app_name">BuffBuddy</string>
    <string name="body_part_prompt">Select Body Part</string>
    <string name="target_prompt">Select Target Muscle</string>
    <string name="equipment_prompt">Select Equipment</string>
    <string name="select_body_part">Select Body Part</string>
    <string name="select_target">Select Target Muscle</string>
    <string name="select_equipment">Select Equipment</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="exercise_not_found">Oops! 😢 We haven\'t found an exercise for that yet, maybe you can create a new one 😉</string>
    <string name="search_exercises_by_name">Search exercises by name</string>
    <string name="add_image">Add Image</string>
    <string name="exercise_gif_image">Exercise GIF/Image</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_new_exercise">Save New Exercise</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="home">Home</string>
    <string name="exercises">Exercises</string>
    <string name="workouts">Workouts</string>
    <string name="settings">Settings</string>
    <string name="choose_workout">Choose A Workout</string>
    <string name="previous_week">Previous Week</string>
    <string name="next_week">Next Week</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="apply_filters_btf">Apply Filters</string>
    <string name="select_equipment_bsf">Select Equipment</string>
    <string name="select_body_part_bsf">Select Body Part</string>
    <string name="select_target_muscle">Select Target Muscle</string>
    <string name="filter_exercises">Filter Exercises</string>
    <string name="capture_from_camera">Capture from \n Camera</string>
    <string name="choose_from_gallery">Choose from \n Gallery</string>
    <string name="_15_minutes_before">15 minutes before</string>
    <string name="_30_minutes_before">30 minutes before</string>
    <string name="_1_hour_before">1 hour before</string>
    <string name="_3_hours_before">3 hours before</string>
    <string name="save_exercise_button">Save Exercise Button</string>
    <string name="exercise_name">* Exercise Name</string>
    <string name="select_body_part_fae">* Select Body Part</string>
    <string name="select_equipment_fae">* Select Equipment</string>
    <string name="exercise_name_fae">Exercise Name</string>
    <string name="instructions_comma_separated">Instructions (comma separated)</string>
    <string name="instructions_optional">Instructions (optional)</string>
    <string name="select_target_fae">* Select Target</string>
    <string name="secondary_muscles_optional">Secondary Muscles (optional)</string>
    <string name="secondary_muscles_comma_separated">Secondary Muscles (comma separated)</string>
    <string name="create_workout">Create Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="instructions">Instructions</string>
    <string name="secondary_muscles">Secondary Muscles:</string>
    <string name="overview">Overview</string>
    <string name="oops_we_haven_t_found_an_exercise_for_that_yet_maybe_you_can_create_a_new_one">Oops! 😢 We haven\'t found an exercise for that yet, maybe you can create a new one 😉</string>
    <string name="search_exercises_by_name_fm">Search exercises by name</string>
    <string name="add_exercise_icon">Add Exercise Icon</string>
    <string name="create_a_new_exercise">Create A New Exercise</string>
    <string name="filter_icon_fm">Filter Icon</string>
    <string name="my_workouts">My Workouts</string>
    <string name="create_a_new_workout">Create A New Workout</string>
    <string name="exercise_name_ie">Exercise Name:</string>
    <string name="target_ie">Target:</string>
    <string name="equipment">Equipment:</string>
    <string name="edit_exercise">Edit Exercise</string>

</resources>