<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/bodyPartSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/body_part_prompt" />

    <Spinner
        android:id="@+id/targetSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/target_prompt" />

    <Spinner
        android:id="@+id/equipmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/equipment_prompt" />

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Apply Filters"/>
</LinearLayout>
